# manipulation_planning

./: .gitignore  CMakeLists.txt  README.md  ims_interface_plugin_description.xml  package.xml
config/: hopf_dist_samples_healpix.txt  manip.mprim  manip_6dof.mprim  manip_6dof_mprim.yaml  manip_7dof.mprim  manip_7dof_mprim.yaml  manip_timed_7dof.mprim  omni_base.mprim  ws.mprim  ws_ctmp.mprim  ws_ctmp_mprim.yaml  ws_mprim.yaml
config/panda/: panda_scene_1.scene
domains/panda/scene1/: panda_goals.txt  panda_starts.txt
include/manipulation_planning/: KDTree.hpp  MoveitInterface.hpp  ims_interface.h  ims_planning_context.h  manipHeuristics.hpp  manipulationActionSpace.hpp  manipulation_action_space.hpp  panda_action_space.hpp  test.hpp  utils.hpp
include/manipulation_planning/action_space/: action_types.hpp  egraph_manipulation_action_space.hpp  manipulation_action_space.hpp  manipulation_action_space_mgs.hpp  manipulation_constrained_action_space.hpp  manipulation_edge_action_space.hpp  manipulation_edge_rl_action_space.hpp  manipulation_experience_accelerated_constrained_action_space.hpp  manipulation_roadmap_action_space.hpp  mobile_manipulation_action_space.hpp  mramp_manipulation_action_space.hpp
include/manipulation_planning/common/: KDTree.hpp  MoveitInterface.hpp  factories.hpp  moveit_interface.hpp  moveit_scene_interface.hpp  trajectory_utils.hpp  utils.hpp
include/manipulation_planning/common/smpl_grid/: grid.h  grid.hpp
include/manipulation_planning/controllers/: controllers_manip.hpp
include/manipulation_planning/heuristics/: manipHeuristics.hpp  manip_heuristics.hpp
launch/: cbs_test.launch  cspace_test.launch  cspace_test.launch.py  mramp_test.launch.py  panda.launch  parallel_test.launch  rl_test.launch  xecbs_test.launch.py
scenes/: rack_only.scene  rack_prims.scene
scripts/: hopf_dist_test.py  nn_inference_client.py  nn_inference_server.py  ycb_download.py
src/: cbs_test.cpp  confspace_edge_test.cpp  confspace_egraph_test.cpp  confspace_parallel_test.cpp  confspace_rl_test.cpp  confspace_test.cpp  ims_interface.cpp  ims_planner_manager.cpp  ims_planning_context.cpp  mramp_test.cpp  occupancy_map_test.cpp  plan_with_object.cpp  run_manip_mgs.cpp  run_mobile_manip.cpp  run_mobile_manip_mgs.cpp  test.cpp  workspace_test.cpp  xecbs_test.cpp
srv/: TriggerNN.srv
stl/: crate.stl  rack.stl  rack.stp  rack_short.stl
stl/ycb/002_master_chef_can/urdf/: 002_master_chef_can_tsdf.urdf
stl/ycb/003_cracker_box/urdf/: 003_cracker_box_tsdf.urdf
stl/ycb/004_sugar_box/urdf/: 004_sugar_box_tsdf.urdf
stl/ycb/005_tomato_soup_can/urdf/: 005_tomato_soup_can_tsdf.urdf
stl/ycb/006_mustard_bottle/urdf/: 006_mustard_bottle_tsdf.urdf
stl/ycb/007_tuna_fish_can/urdf/: 007_tuna_fish_can_tsdf.urdf
stl/ycb/008_pudding_box/urdf/: 008_pudding_box_tsdf.urdf
stl/ycb/009_gelatin_box/urdf/: 009_gelatin_box_tsdf.urdf
stl/ycb/010_potted_meat_can/urdf/: 010_potted_meat_can_tsdf.urdf
stl/ycb/011_banana/urdf/: 011_banana_tsdf.urdf
stl/ycb/019_pitcher_base/urdf/: 019_pitcher_base_tsdf.urdf
stl/ycb/021_bleach_cleanser/urdf/: 021_bleach_cleanser_tsdf.urdf
stl/ycb/024_bowl/urdf/: 024_bowl_tsdf.urdf
stl/ycb/025_mug/urdf/: 025_mug_tsdf.urdf
stl/ycb/035_power_drill/urdf/: 035_power_drill_tsdf.urdf
stl/ycb/036_wood_block/urdf/: 036_wood_block_tsdf.urdf
