<?xml version="1.0"?>
<package format="3">
  <name>manipulation_planning</name>
  <version>0.0.0</version>
  <description>The manipulation_planning package for ROS 2.</description>
  <maintainer email="yorai@cmu.edu">itamar</maintainer>

  <license>TODO</license>

  <depend>eigen3_cmake_module</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Specify the dependencies for exporting -->
    <depend>eigen3_cmake_module</depend>
    <depend>moveit_msgs</depend>
    <depend>moveit_ros_planning</depend>
    <depend>moveit_ros_planning_interface</depend>
    <depend>rclcpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2</depend>
  </export>
</package>
